Finishing rough draft of tetris game

--- a/TetrisUI.html
+++ b/TetrisUI.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="TetrisUI.css">
+    <link rel="icon" href="favicon.png">
     <title>Tetris</title>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 </head>
