--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="TetrisUI.css">
     <title>Tetris</title>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
