--- a/Public/Tetris/tetris.html
+++ b/Public/Tetris/tetris.html
@@ -1,1 +1,19 @@
-h
+<html lang="en-US">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link rel="stylesheet" href="TetrisUI.css">
+            <link rel="icon" href="favicon.png">
+            <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+            <title>Tetris</title>
+        </head>
+        <center>
+            <canvas id="myCanvas" style="border:1px solid #d3d3d3;" width=2000 height=2000>
+                    Your browser does not support the HTML5 canvas tag.</canvas>
+        </center>
+
+        
+            <script type="text/javascript" src="TetrisUI.js"></script>
+        </body>
+        
+        </html>
